[package]
name = "hackernews_api"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
scraper = "0.10.1"
serde_json = "1.0.40"
failure = "0.1.5"
